# git-annex-borg

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  git-annex-borg.sublime-project  setup.cfg  setup.py
scripts/: install-annex-latest-build.sh  install-borg-latest-build.sh
src/git_annex_borg/: borg_control.py  msgio.py  protocol.py  remote.py
testing/: test_acceptance.py
