[metadata]
name=git_annex_borg
description="importer and special remote for using borg as a data source of git-annex"

install_requires =
	click
	pytest; extras == "test"
	borgbackup ~= 1.1.5
python_requires = >=3.6

[options]
zip_safe = False
include_package_data = True
packages = find:


[flake8]
max-line-length = 88
