[metadata]
name=git_annex_borg
description="importer and special remote for using borg as a data source of git-annex"
long_description= file:README.md


install_requires =
	attrs >= 18.1.0
	pytest; extras == "test"
	borgbackup ~= 1.1.5
python_requires = >=3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =  = src

[options.entry_points]
console_scripts =
    git-annex-remote-borg = git_annex_borg.remote:main
    git-annex-borg = git_annex_borg.remote:support

[flake8]
max-line-length = 88
